# otus-cpp-2023-06-hw02

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
